# pointe.dev

./: .env.staging.example  .gitignore  Caddyfile  Cargo.toml  Dockerfile  HANDOFF.md  LICENSE  Leptos.toml  README.md  SYSTEM_IMPROVEMENTS_PLAN.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  docker-workflow.yml  lighthouserc.json  package-lock.json  package.json  tailwind.config.js  tarpaulin.toml
.cargo___/: config.toml
.github/: CLAUDE.md  CODEOWNERS  copilot-instructions.md
.github/workflows/: ci.yml  deploy-staging.yml  deploy.yml  docker.yml
clickhouse/: cluster.xml
crates/backend/: Cargo.toml
crates/backend/src/: agents.rs  capabilities.rs  cloudflare.rs  config.rs  credentials.rs  email.rs  embeddings.rs  langfuse.rs  lib.rs  main.rs  mcp.rs  oauth.rs  pending.rs  pipeline.rs  pitch.rs  qdrant.rs  sessions.rs  state.rs  stripe.rs
crates/backend/src/guardrails/: clingo.rs  facts.rs  mod.rs  policy.lp
crates/backend/src/handlers/: admin.rs  client.rs  credentials.rs  health.rs  ingest.rs  mcp.rs  mod.rs  pipeline.rs  secret_share.rs  services.rs  stripe.rs
crates/backend/tests/: dogfood.rs  integration.rs
crates/frontend/: Cargo.toml  index.html  input.css  robots.txt  sitemap.xml  styles.css
crates/frontend/src/: i18n.rs  lib.rs
crates/frontend/src/components/: ballet_hero.rs  consent_banner.rs  contact_modal.rs  contact_modal_fixed.rs  contact_modal_new.rs  delivery.rs  hero.rs  layout.rs  mod.rs  seo.rs  theme.rs  theme_toggle.rs  workflow_canvas.rs
crates/frontend/src/components/behind_curtain/: animations.rs  mod.rs  state.rs
crates/frontend/src/components/behind_curtain/panels/: art.rs  mod.rs  technique.rs
crates/frontend/src/components/behind_curtain/slider/: mod.rs
crates/frontend/src/pages/: admin.rs  chat.rs  espace.rs  faq.rs  home.rs  legal.rs  merci.rs  mod.rs  not_found.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
data/: n8n_templates.json
docs/: HANDOFF.md  README.md  STAGING.md  WORKFLOW.md  architecture.md  auth-sessions.md  credentials.md  deployment.md  env.md  guardrails.md  oauth.md  pipeline.md
gitignore_this_folder/: OpenClaw — Personal AI Assistant.html
gitignore_this_folder/OpenClaw — Personal AI Assistant_files/: Layout.wUUzETCH.css  css  index.astro_astro_type_script_index_0_lang.DmnWrmT4.js.download  index@_@astro.CMibRDka.css
landing/: index.html
prompts/: qualifier-chatbot-prompt.txt
scripts/: enable-branch-protection.sh  push-prompts.sh  server-setup.sh  smoke-qualifier.sh
tests/e2e/: fixtures.ts  golden-path.spec.ts  package-lock.json  package.json  playwright.config.ts
tests/smoke/: README.md  auth_status.hurl  chat.hurl  health.hurl  home.hurl  pitch_result.hurl  stripe_webhook.hurl  vars.env
