[workspace]
members = ["crates/frontend", "crates/backend", "crates/shared"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["pointe.dev team"]
repository = "https://github.com/pointe-dev/pointe.dev"
license = "MIT"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.40", features = ["full"] }

# Web Frameworks
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "fs", "compression-gzip"] }

# Leptos (Frontend)
leptos = { version = "0.6", features = ["hydrate"] }
leptos_meta = "0.6"
leptos_router = "0.6"
leptos_axum = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "json", "chrono", "uuid"] }

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1


[[workspace.metadata.leptos]]
name = "pointe"
crate-type = "cdylib"
package = "frontend"
lib-package = "frontend"
lib-dir = "crates/frontend/src"
bin-package = "backend"
output-name = "pointe"
bin-dir = "crates/backend/src"

[workspace.metadata.leptos.build]
sass-input-file = "crates/frontend/src/style.scss"
sass-output-file = "target/site/style.css"

[workspace.metadata.leptos.bin]
name = "pointe"
end2end-dir = "e2e"
end2end-cmd = "npx playwright test"