[package]
name = "backend"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
sqlx = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
fastembed = "4"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
urlencoding = "2"

shared = { path = "../shared" }

[[bin]]
name = "backend"
path = "src/main.rs"

[dev-dependencies]
axum-test = "15"
tokio = { version = "1.40", features = ["full"] }
serde_json = "1.0"
chrono = { version = "0.4" }

[lib]
name = "backend_lib"
path = "src/lib.rs"
