[package]
name = "frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
console_log = "1.0"
log = "0.4"

shared = { path = "../shared" }

[lib]
crate-type = ["cdylib"]
