[package]
name = "frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_router = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Element", "DomRect", "Storage", "Window", "Navigator", "HtmlTextAreaElement", "CssStyleDeclaration", "HtmlCanvasElement", "WebGl2RenderingContext", "WebGlContextAttributes", "MediaQueryList"] }
js-sys = "0.3"
console_log = "1.0"
log = "0.4"
gloo-net = "0.6"
gloo-render = "0.3"
wasm-bindgen-futures = "0.4"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
petgraph = { version = "0.6", default-features = false, features = ["stable_graph"] }

shared = { path = "../shared" }
three-d = { version = "0.19.0", default-features = false }

[lib]
crate-type = ["cdylib"]
